# Foundry-Engagement-Kit

./: .gitignore  DESIGN_AUDIT.md  DESIGN_AUDIT_V2.md  DESIGN_AUDIT_V3.md  PR_DESCRIPTION.md  README.md
.github/workflows/: ci.yml  release.yml
app/: .gitignore  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/scripts/: dev-scroll-test.mjs  open-installer.sh  post-build-hint.mjs  stage-workspace-seed.mjs  tauri-install.mjs
app/src/: App.tsx  index.css  main.tsx  types.ts
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.ios.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: calendar.rs  foundry_api.rs  handoff_pack.rs  lib.rs  main.rs  report_export.rs  workspace_backup.rs  workspace_search.rs  workspace_setup.rs
app/src/components/: AppBrand.tsx  CadenceAlerts.tsx  CommandPalette.tsx  Dashboard.tsx  DeliveryTypeSelect.tsx  Editor.tsx  EngagementTypeBadge.tsx  ErrorBanner.tsx  FileTree.tsx  FoundryAreaSelect.tsx  KeyboardShortcutsModal.tsx  MarkdownPreview.tsx  Modal.tsx  NavigationBackBar.tsx  OntologyElementTypeSelect.tsx  OrganizationSelect.tsx  OverflowMenu.tsx  OverlayPortal.tsx  RecentActivity.tsx  ReferenceListSelect.tsx  RoleSelect.tsx  SectionFallback.tsx  SettingsView.tsx  ShortcutKbd.tsx  Sidebar.tsx  Skeleton.tsx  SlideOverBackdrop.tsx  StatusBadge.tsx  Tooltip.tsx
app/src/components/architecture/: ArchNode.tsx  ArchNodeDetailsPanel.tsx  ArchitectureEditor.tsx  ArchitectureEditorCanvas.tsx  ArchitectureEditorContext.tsx  ArchitectureEditorToolbar.tsx  OntologyGraphOverview.tsx  OntologyLiteNode.tsx  OntologySigmaExplorer.tsx
app/src/components/daily/: DailyHub.tsx
app/src/components/focus/: FocusFloatingPill.tsx  FocusTimer.tsx
app/src/components/forms/: FormField.tsx  MeetingPicker.tsx  ProjectPicker.tsx
app/src/components/foundry/: FoundryConnectionModal.tsx  FoundryHealthBadge.tsx  FoundryImportButton.tsx  FoundryImportDiffModal.tsx  index.ts  (+1 more)
app/src/context/: ConfirmContext.tsx  FocusTimerContext.tsx  ThemeProvider.tsx  ToastContext.tsx
app/src/hooks/: useDebouncedPersist.ts  useDebouncedValue.ts  useFocusTimer.ts
app/src/lib/: actionItems.ts  adr.ts  api.ts  appNavigation.ts  appSectionStore.ts  architectureNodeTypes.ts  architectureSync.ts  architectureViews.ts  cadence.ts  calendarApi.ts  calendarTypes.ts  checklistData.ts  customerSummary.ts  dashboardSnapshot.ts  decisions.ts  deliveryBoard.ts  deliveryTypes.ts  documentTemplates.ts  engagementData.ts  engagementMeta.ts  engagementRegister.ts  engagementStatus.ts  engagementTypes.ts  focusTimer.ts  foundryApi.ts  foundryAreas.ts  foundryConnection.ts  foundryLinks.ts  foundrySync.ts  foundryTypes.ts  hubListings.ts  insights.ts  jiraExport.ts  markdown.ts  notifications.ts  onboarding.ts  ontologyElements.ts  ontologyGraphBrowse.ts  ontologyGraphDisplay.ts  ontologyGraphGexf.ts  (+22 more)
daily/: standup-2026-06-22.md  standup.md
project/_template/00-discovery/: discovery.md
project/_template/02-design/: design-overview.md  pipeline-design.md
project/_template/04-deploy/: runbook.md
project/_template/05-handoff/: handoff.md
project/test-project-one/: README.md  engagement.json  phase-checklist.json
project/test-project-one/00-discovery/: discovery.md
project/test-project-one/01-scoping/: scoping.md
project/test-project-one/02-design/: architecture.json  design-overview.md  ontology-design.md  security-permissions.md
reference/: architecture-node-types.json  delivery-types.json  foundry-api-integrations.md  foundry-api-types.json  foundry-areas.json  ontology-element-types.json  roles.json  workshop-module-map.md
weekly/: customer-sync.md  weekly-review-2026-06-22.md  weekly-review.md
weekly/test-project-one/: 2026-06-23-customer-sync.md  2026-06-23-weekly-review.md
(+48 files in other folders)
