[package]
name = "foundry-engagement-kit"
version = "0.1.0"
description = "Foundry Engagement Kit"
authors = ["you"]
edition = "2021"

[lib]
name = "foundry_engagement_kit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "now", "serde"] }
walkdir = "2"
printpdf = "0.7"
docx-rs = "0.4"
zip = "2"
