[package]
name = "foundry-engagement-kit"
version = "0.1.0"
description = "Foundry Engagement Kit"
authors = ["you"]
edition = "2021"

[lib]
name = "foundry_engagement_kit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
# Enable macOS EventKit integration for native calendar access (Rust 1.85+)
eventkit = ["dep:objc2", "dep:objc2-foundation", "dep:objc2-event-kit", "dep:block2"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "now", "serde"] }
walkdir = "2"
printpdf = "0.7"
docx-rs = "0.4"
zip = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# macOS Calendar Integration (EventKit)
# Requires Rust 1.85+ due to transitive dependency requirements
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", features = ["NSDate", "NSArray", "NSString", "NSCalendar", "NSError", "NSEnumerator", "NSURL"], optional = true }
objc2-event-kit = { version = "0.3", features = ["EKEventStore", "EKCalendar", "EKEvent", "EKObject", "EKSource", "EKTypes", "EKParticipant", "block2"], optional = true }
block2 = { version = "0.6", optional = true }
